tests/derive_ui/option_default_value.stderr
error: default_value is meaningless for Option
  --> $DIR/option_default_value.rs:14:19
   |
14 |     #[clap(short, default_value = 1)]
   |                   ^^^^^^^^^^^^^
